--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,13 @@ sudo: false
 
 script: ruby test.rb
 
-rvm:
-  - 1.9.3
-  - 2.0
-  - 2.1
-  - 2.2
-  - 2.3
-  - ruby-head
+env:
+  - RUBY_VERSION=1.9.3
+  - RUBY_VERSION=2.0
+  - RUBY_VERSION=2.1
+  - RUBY_VERSION=2.2
+  - RUBY_VERSION=2.3
+  - RUBY_VERSION=ruby-head
 
 notifications:
   email: false
-
-before_rvm:
-  - rvm get master
