--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,13 @@ sudo: false
 script: ruby test.rb
 
 env:
-  - RUBY_VERSION=1.9.3
-  - RUBY_VERSION=2.0
-  - RUBY_VERSION=2.1
-  - RUBY_VERSION=2.2
-  - RUBY_VERSION=2.3
-  - RUBY_VERSION=ruby-head
+  matrix:
+    - RUBY_VERSION=1.9.3
+    - RUBY_VERSION=2.0
+    - RUBY_VERSION=2.1
+    - RUBY_VERSION=2.2
+    - RUBY_VERSION=2.3
+    - RUBY_VERSION=ruby-head
 
 before_install:
   - rvm get master
