--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,16 @@ script: ruby test.rb
 
 env:
   matrix:
-    - RUBY_VERSION=1.9.3
-    - RUBY_VERSION=2.0
-    - RUBY_VERSION=2.1
-    - RUBY_VERSION=2.2
-    - RUBY_VERSION=2.3
-    - RUBY_VERSION=ruby-head
+    - RUBY=1.9.3
+    - RUBY=2.0
+    - RUBY=2.1
+    - RUBY=2.2
+    - RUBY=2.3
+    - RUBY=ruby-head
 
 before_install:
   - rvm get master
-  - rvm use $RUBY_VERSION --install --binary --fuzzy
+  - rvm use $RUBY --install --binary --fuzzy
 
 notifications:
   email: false
