--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 
 before_install:
   - rvm get master
-  - rvm list known
+  - cat ~/.rvm/config/db
   - rvm use $RUBY --install --binary --fuzzy
 
 notifications:
