--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ env:
 
 before_install:
   - rvm get master
-  - cat ~/.rvm/config/db
-  - rvm use $RUBY --install --binary --fuzzy
+  - rvm use $RUBY --install --binary --fuzzy --debug
 
 notifications:
   email: false
