--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
 
 before_install:
   - rvm get master
+  - rvm version
+  - which rvm
   - rvm use $RUBY --install --binary --fuzzy --debug
 
 notifications:
