Split the commands
RVM use doesn't really want to lookup remote known Ruby ...

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ env:
 before_install:
   - rm $rvm_path/user/db
   - rvm get master
-  - rvm use $RUBY --install --remote
+  - rvm install $RUBY
+  - rvm use $RUBY
 
 notifications:
   email: false
