--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ env:
 before_install:
   - rm $rvm_path/user/db
   - rvm get master
-  - rvm install $RUBY --remote
-  - rvm use $RUBY
+  - rvm use rvm use $(rvm strings $RUBY) --install --binary --debug
 
 notifications:
   email: false
