Remove unnecessary debug codes :shipit:

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,7 @@ before_install:
   - rm $rvm_path/user/db
   - rvm get master
   - rvm alias delete $RUBY
-  - rvm list known
-  - echo $(rvm strings $RUBY)
-  - rvm use rvm use $(rvm strings $RUBY) --install --binary --debug
+  - rvm use $(rvm strings $RUBY) --install --binary
 
 notifications:
   email: false
