--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - cat $rvm_path/user/db || echo "No file"
   - rvm get master
   - rvm alias delete $RUBY
+  - echo $(rvm strings $RUBY)
   - rvm use $(rvm strings $RUBY) --install --binary --debug
 
 notifications:
