--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 sudo: false
 
-script: ruby test.rb
+script: bundle exec rspec spec
+
+before_install:
+  - gem update bundler
 
 rvm:
   - 2.2.0
